[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
group = "0.13.0"
halo2_proofs = { version = "0.3.0", features = ["dev-graph", "tabbycat"] }
plotters = {version = "0.3.5", optional = true}
